force-app/main/default/objects/SE_Activity__c/SE_Activity__c.object-meta.xml
<CustomObject>
    <label>SE Activity</label>
    <pluralLabel>SE Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>ACT-{00000}</displayFormat>
    </nameField>
</CustomObject>