force-app/main/default/objects/SE_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Discovery Call</fullName>
                </value>
                <value>
                    <fullName>Internal Sync</fullName>
                </value>
                <value>
                    <fullName>POC Check-in</fullName>
                </value>
                <value>
                    <fullName>RFP Work</fullName>
                </value>
                <value>
                    <fullName>Technical Demo</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>