force-app/main/default/objects/SE_Activity__c/fields/SE_Id__c.field-meta.xml
<CustomField>
    <fullName>SE_Id__c</fullName>
    <label>SE Id</label>
    <type>Text</type>
    <length>20</length>
</CustomField>